--- a/JavaAdapter/pom.xml
+++ b/JavaAdapter/pom.xml
@@ -6,7 +6,7 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mycompany</groupId>
 	<artifactId>JavaAdapter</artifactId>
@@ -20,6 +20,11 @@
 			<artifactId>adapter-maven-api</artifactId>
 			<scope>provided</scope>
 			<version>8.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.wink</groupId>
+			<artifactId>wink-json4j</artifactId>
+			<version>1.4</version>
 		</dependency>
 	</dependencies>
 
