--- a/JavaSQL/pom.xml
+++ b/JavaSQL/pom.xml
@@ -15,6 +15,16 @@
 			<scope>provided</scope>
 			<version>8.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
