--- a/JavaAdapter/pom.xml
+++ b/JavaAdapter/pom.xml
@@ -26,6 +26,12 @@
 			<artifactId>wink-json4j</artifactId>
 			<version>1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<scope>compile</scope>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
