--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.samples</groupId>
@@ -10,7 +10,11 @@
 	<modules>
 		<module>JavaScriptSQL</module>
 		<module>JavaScriptHTTP</module>
-	</modules>
+		<module>JavaAdapter</module>
+		<module>JavaHTTP</module>
+		<module>JavaSQL</module>
+		<module>UsingJavaInJavaScriptAdapters</module>
+  </modules>
 
 	<properties>
 		<!-- parameters for deploy mfpf adapter -->
