--- a/JavaAdapter/pom.xml
+++ b/JavaAdapter/pom.xml
@@ -22,6 +22,11 @@
 			<version>8.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.ibm.mfp</groupId>
+			<artifactId>mfp-security-checks-base</artifactId>
+			<version>8.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.wink</groupId>
 			<artifactId>wink-json4j</artifactId>
 			<version>1.4</version>
