--- a/JavaHTTP/pom.xml
+++ b/JavaHTTP/pom.xml
@@ -16,15 +16,16 @@
 			<version>8.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.ibm.mfp</groupId>
+			<artifactId>mfp-security-checks-base</artifactId>
+			<version>8.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.wink</groupId>
 			<artifactId>wink-json4j</artifactId>
 			<version>1.4</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.1</version>
-		</dependency>
+
 	</dependencies>
 
 	<properties>
