--- a/JavaScriptSOAP/pom.xml
+++ b/JavaScriptSOAP/pom.xml
@@ -18,10 +18,10 @@ limitations under the License.
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sample</groupId>
-	<artifactId>SOAPAdapter</artifactId>
+	<artifactId>JavaScriptSOAP</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>adapter</packaging>
-	<name>SOAPAdapter</name>
+	<name>JavaScriptSOAP</name>
 
 	<dependencies>
 		<dependency>
