remove WL.Server.createSQLStatement (deprecated) + add mysql driver dependency

--- a/JavaScriptSQL/pom.xml
+++ b/JavaScriptSQL/pom.xml
@@ -30,6 +30,11 @@ limitations under the License.
 			<scope>provided</scope>
 			<version>8.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
