--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@ limitations under the License.
 		<mfpfUrl>http://localhost:9080/mfpadmin</mfpfUrl>
 		<mfpfUser>admin</mfpfUser>
 		<mfpfPassword>admin</mfpfPassword>
+		<mfpfRuntime>mfp</mfpfRuntime>
 	</properties>
 
 	<build>
