--- a/JavaAdapter/pom.xml
+++ b/JavaAdapter/pom.xml
@@ -29,12 +29,12 @@ limitations under the License.
 			<groupId>com.ibm.mfp</groupId>
 			<artifactId>adapter-maven-api</artifactId>
 			<scope>provided</scope>
-			<version>8.0.0</version>
+			<version>[8.0.0,9.0.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm.mfp</groupId>
 			<artifactId>mfp-security-checks-base</artifactId>
-			<version>8.0.0</version>
+			<version>[8.0.0,9.0.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.wink</groupId>
@@ -59,7 +59,6 @@ limitations under the License.
 			<plugin>
 				<groupId>com.ibm.mfp</groupId>
 				<artifactId>adapter-maven-plugin</artifactId>
-				<version>8.0.0</version>
 				<extensions>true</extensions>
 			</plugin>
 		</plugins>
