--- a/JavaSQL/pom.xml
+++ b/JavaSQL/pom.xml
@@ -29,7 +29,7 @@ limitations under the License.
 			<groupId>com.ibm.mfp</groupId>
 			<artifactId>adapter-maven-api</artifactId>
 			<scope>provided</scope>
-			<version>8.0.0</version>
+		<version>[8.0.0,9.0.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -59,7 +59,6 @@ limitations under the License.
 			<plugin>
 				<groupId>com.ibm.mfp</groupId>
 				<artifactId>adapter-maven-plugin</artifactId>
-				<version>8.0.0</version>
 				<extensions>true</extensions>
 			</plugin>
 		</plugins>
